spade-tests/src/snapshots/spade_tests__typeinference__type_error_when_overflow_is_possible.snap
---
source: spade-tests/src/typeinference.rs
---
entity main(a: int<16>, b: int<16>) -> int<16> {
    a + b
}


error: Output type mismatch. Expected int<16>, got int<17>
  ┌─ testinput:1:48
  │  
1 │   entity main(a: int<16>, b: int<16>) -> int<16> {
  │                                          ------- int<16> type specified here
  │ ╭────────────────────────────────────────────────^
2 │ │     a + b
  │ │     ----- Type 17 inferred here
3 │ │ }
  │ ╰─^ Found type int<17>
  │  
  = note: Expected: 16
                in: int<16>
               Got: 17
                in: int<17>
