spade-tests/src/snapshots/spade_tests__typeinference__type_level_ifs_have_to_be_numbers.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() -> uint<8> {
    $if bool {
        0
    } $else {
        1
    }
}


error: bool is not a type level integer but is used in a const generic expression.
  ┌─ testinput:2:9
  │
2 │     $if bool {
  │         ^^^^ Expected type level integer
  │
  ┌─ <str>:1:1
  │
1 │ 
  │ - bool is defined here
