spade-tests/src/snapshots/spade_tests__typeinference__type_parameter_propagation_regression.snap
---
source: spade-tests/src/typeinference.rs
---
struct ReadPort_<#uint W> { }

struct FifoRead<#uint W> { }

entity fifo_read_side<#uint W>(
    write_ptr_w: uint<W>,
    ram_read: ReadPort_<W>,
    read_ptr_wire: inv uint<W>,
) -> FifoRead<W> {
    FifoRead {}
}

entity fifo<#uint W>(
    ram_read: ReadPort_<W>
) -> FifoRead<W> {
    let (read_ptr_w, read_ptr_wire) = port();

    let write_ptr_w  = 0;

    let full_w = read_ptr_w == 0;


    inst fifo_read_side(
            write_ptr_w:,
            ram_read:,
            read_ptr_wire:,
        )
}

entity fifo_test_harness(
    ram_read: ReadPort_<4>
) {
    let _ = inst fifo::<4>(ram_read:);
}


error: read_ptr_wire is unused
  ┌─ testinput:8:5
  │
8 │     read_ptr_wire: inv uint<W>,
  │     ^^^^^^^^^^^^^ read_ptr_wire is unused
  │
  = note: read_ptr_wire is an inverted wire (`inv`) which must be set
  = The error is in a generic unit instantiated at
    ╰ testinput:23 fifo_read_side<4>
    ╰ testinput:33 fifo<4>
