spade-tests/src/snapshots/spade_tests__typeinference__type_params_are_accessible_in_units.snap
---
source: spade-tests/src/typeinference.rs
---
fn produce_something<T>() -> T __builtin__

fn test<T>() {

    let a: T = produce_something::<bool>();
}

fn main() {
    test::<int<9>>()
}


error: Expected type int<9>, got bool
  ┌─ testinput:5:16
  │
5 │     let a: T = produce_something::<bool>();
  │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │                │                   │
  │                │                   Type bool inferred here
  │                Expected int<9>
  ·
9 │     test::<int<9>>()
  │            ----- Type int<9> inferred here
  │
  = note: Expected: int<9>
               Got: bool
  = The error is in a generic unit instantiated at
    ╰ testinput:9 test<int<9>>
