spade-tests/src/snapshots/spade_tests__typeinference__type_pattern_argument_type_mismatch_named.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {
    b: bool,
}

entity main() -> bool {
    let x = X$(b: true);
    match x {
        X { b: 0 } => true,
        _ => false,
    }
}


error: Argument type mismatch. Expected bool got Number<#uint>
  ┌─ testinput:8:16
  │
2 │     b: bool,
  │        ---- Type bool inferred here
  ·
8 │         X { b: 0 } => true,
  │                ^ Expected bool
  │
  = note: Expected: bool
               Got: Number<_>
