spade-tests/src/snapshots/spade_tests__typeinference__type_pattern_argument_type_mismatch_positional2.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {
    b: bool,
}

entity main(x: X) -> bool {
    match x {
        X(0) => true,
        _ => false,
    }
}


error: Argument type mismatch. Expected bool got Number<#uint>
  ┌─ testinput:7:11
  │
2 │     b: bool,
  │        ---- Type bool inferred here
  ·
7 │         X(0) => true,
  │           ^ Expected bool
  │
  = note: Expected: bool
               Got: Number<_>
