spade-tests/src/snapshots/spade_tests__typeinference__type_pattern_argument_type_mismatch_positional3.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}
struct B {}

struct X {
    b: B,
}

entity main(x: X) -> bool {
    match x {
        X(A()) => true,
        _ => false,
    }
}


error: Argument type mismatch. Expected B got A
   ┌─ testinput:10:11
   │
 5 │     b: B,
   │        - Type B inferred here
   ·
10 │         X(A()) => true,
   │           ^^^ Expected B
   │
   = note: Expected: B
                Got: A
