spade-tests/src/snapshots/spade_tests__typeinference__type_pattern_argument_type_mismatch_shortnamed.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {
    b: bool,
}

entity main() {
    decl b;
    let x: int<8> = b;
    let X { b } = X(true);
}


error: Argument type mismatch. Expected bool got int<8>
  ┌─ testinput:8:13
  │
2 │     b: bool,
  │        ---- Type bool inferred here
  ·
7 │     let x: int<8> = b;
  │            ------ Type int<8> inferred here
8 │     let X { b } = X(true);
  │             ^ Expected bool
  │
  = note: Expected: bool
               Got: int<8>
